--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <include src="./partials/"></include>
+    <include src="./partials/example.html"></include>
     <include src="./partials/"></include>
     <include src="./partials/"></include>
     <include src="./partials/"></include>
