--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <include src="./partials/example.html"></include>
+    <!-- <include src="./partials/"></include>
     <include src="./partials/"></include>
     <include src="./partials/"></include>
     <include src="./partials/"></include>
-    <include src="./partials/"></include>
-    <include src="./partials/"></include>
+    <include src="./partials/"></include> -->
   </body>
 </html>
