--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,8 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <include src="./partials/example.html"></include>
-    <include src="./partials/example.html"></include>
-    <include src="./partials/example.html"></include>
-    <!-- <include src="./partials/"></include>
-    <include src="./partials/"></include>
-    <include src="./partials/"></include> -->
+    <include src="./partials/header.html"></include>
+    <include src="./partials/events.html"></include>
+    <include src="./partials/footer.html"></include>
   </body>
 </html>
